--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "moment": "^2.29.4",
+    "date-and-time": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
